# linyhi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build_flags.in.hpp
readme_resources/linyhi/: config.lh  text.txt
src/: config.cpp  main.cpp  string_formatter.cpp
src/sysinfo/: batteryinfo.cpp  cpuinfo.cpp  gpuinfo.cpp  linuxinfo.cpp  memoryinfo.cpp  networkinfo.cpp  sysinfo.hpp  terminfo.cpp
src/terms/: kitty.cpp
src/utils/: color.cpp  colorize.cpp  command.cpp  files.cpp  lh_parser.cpp  strings.cpp  terminfo.cpp
test/: color.cpp
